[package]
name = "videoconverter"
version = "0.3.0"
authors = ["Jamie Quigley <jamie@quigley.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
itertools = "0.12.0"
ffmpeg-the-third = "1"
ffmpeg-sys-the-third = "1"
once_cell = "1.19.0"
tracing = "0.1.40"
regex = "1.10.3"
question = "0.2.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
strum = { version = "0.25.0", features = ["derive"] }
shell-escape = "0.1.5"
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"
walkdir = "2.4.0"
