[package]
name = "videoconverter"
version = "0.3.0"
authors = ["Jamie Quigley <jamie@quigley.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
itertools = "0.13.0"
ffmpeg-the-third = "2.0.1"
ffmpeg-sys-the-third = "2.0.0"
once_cell = "1.19.0"
tracing = "0.1.40"
regex = "1.10.4"
question = "0.2.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
strum = { version = "0.26.2", features = ["derive"] }
shell-escape = "0.1.5"
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.30"
walkdir = "2.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
