[package]
name = "videoconverter"
version = "0.4.0"
authors = ["Jamie Quigley <jamie@quigley.xyz>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
itertools = "0.14.0"
ffmpeg-next = "8.0.0"
ffmpeg-sys-next = "8.0.0"
once_cell = "1.19.0"
tracing = "0.1.40"
regex = "1.10.4"
question = "0.2.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
strum = { version = "0.27.0", features = ["derive"] }
shell-escape = "0.1.5"
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.30"
walkdir = "2.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
color-eyre = "0.6.3"
num_cpus = "1.16.0"
rusqlite = "0.38.0"
tap = "1.0.1"
dirs = "6.0.0"
indicatif = "0.18.3"
termios = "0.3.3"
